# editorconfig-cf

./: .editorconfig  README.md  editorconfig_cf.py  editorconfig_fix.py  setup.cfg
editorconfig_cf/: __init__.py  __main__.py
editorconfig_cf/handling/: pylint.py
handling/: uncrustify.py
tests/c-uncrustify/: b.c.out
tests/cpp-uncrustify/: .editorconfig  a.cpp  a.cpp.out
tests/python-pylint/: .editorconfig  a.py  b.py
