[metadata]
name = editorconfig_cf
version = 0.1
author = Hong Xu
url = https://github.com/xuhdev/editorconfig-cf
description = 
long_description = file: ReadMe.md
keywords = editorconfig_cf
license = LGPL-3.1
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: OSI Approved
	License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = editorconfig_cf, editorconfig_cf.handling
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3

[options.entry_points]
console_scripts =
	editorconfig_cf = editorconfig_cf.__main__:main
